# ffo

./: README.md  family-finances-overview.md  pyproject.toml
FinanceApi/: FinanceApi.csproj  Program.cs  appsettings.json
FinanceApi/Controllers/: AccountsController.cs  AdminController.cs  AuthController.cs  TransactionsController.cs
FinanceApi/Data/: FinanceDbContext.cs
FinanceApi/Dtos/: AccountDtos.cs  AdminDtos.cs  AuthDtos.cs  TransactionDtos.cs
FinanceApi/Models/: Account.cs  Transaction.cs  User.cs
FinanceApi/Services/: ITokenService.cs  TokenService.cs
FinanceApi/wwwroot/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
docs/: spec.md
src/family_finance/: __init__.py  auth.py  cli.py  models.py  planner.py  web.py
tests/: test_auth.py  test_planner.py  test_web.py
