[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "family-finance-planner"
version = "0.1.0"
description = "Planner for multi-user family budgeting and asset allocation"
requires-python = ">=3.10"

[project.scripts]
family-finance = "family_finance.cli:main"
family-finance-web = "family_finance.web:run"

[tool.pytest.ini_options]
pythonpath = ["src"]
